--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,22 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-maven-plugin</artifactId>
+            <version>2.0.8</version>
+            <configuration>
+                <appName>psychicgiggle</appName>
+                <processTypes>
+                    <worker>
+                        java $JAVA_OPTS -cp target/classes:target/dependency/* path.to.your.Main-class
+                    </worker>
+                </processTypes>
+            </configuration>
+        </plugin>
+    </plugins>
+    </build>
 
 </project>
