--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,26 @@
     <build>
     <plugins>
         <plugin>
-            <groupId>com.heroku.sdk</groupId>
-            <artifactId>heroku-maven-plugin</artifactId>
-            <version>2.0.8</version>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>1.1.1</version>
             <configuration>
-                <appName>psychicgiggle</appName>
-                <processTypes>
-                    <worker>
-                        java $JAVA_OPTS -cp target/classes:target/dependency/* path.to.your.Main-class
-                    </worker>
-                </processTypes>
+                <assembleDirectory>target</assembleDirectory>
+                <programs>
+                    <program>
+                        <mainClass>com.home.server.TelegramBot</mainClass>
+                        <name>workerBot</name>
+                    </program>
+                </programs>
             </configuration>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>assemble</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
     </build>
