--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <assembleDirectory>target</assembleDirectory>
                 <programs>
                     <program>
-                        <mainClass>com.home.server.TelegramBot</mainClass>
+                        <mainClass>TelegramBot</mainClass>
                         <name>workerBot</name>
                     </program>
                 </programs>
